--- a/myportfolio.html
+++ b/myportfolio.html
@@ -47,6 +47,7 @@
             background: linear-gradient(90deg, #667eea, #764ba2, #f093fb);
         }
 
+        
         .profile-img {
             width: 150px;
             height: 150px;
@@ -54,19 +55,24 @@
             margin: 0 auto 20px;
             border: 6px solid #fff;
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-            background: linear-gradient(135deg, #667eea, #764ba2);
             display: flex;
             align-items: center;
             justify-content: center;
-            color: white;
-            font-size: 48px;
-            font-weight: bold;
             transition: transform 0.3s ease;
+            overflow: hidden;
+        }
+
+        .profile-img img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 50%;
         }
 
         .profile-img:hover {
             transform: scale(1.05);
         }
+
 
         h1 {
             color: #2c3e50;
@@ -279,7 +285,8 @@
 <body>
     <div class="container">
         <header class="animated">
-            <div class="profile-img">RZ</div>
+         
+            <div class="profile-img"><img src="zo.jpg" alt="Razafimandimby Zo" width="150" height="150"></div>
             <h1>Razafimandimby Zo</h1>
             <p class="subtitle">Développeur Full Stack</p>
             <p class="about-text">Professionnel engagé et adaptable, possédant une excellente capacité à travailler en équipe et à gérer efficacement les priorités dans un environnement dynamique.</p>
@@ -289,19 +296,19 @@
                     <svg class="icon" viewBox="0 0 24 24">
                         <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.89 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
                     </svg>
-                    razafimandimbyzo01@gmail.com
+                    razafimandimbyzo618@gmail.com
                 </div>
                 <div class="contact-item">
                     <svg class="icon" viewBox="0 0 24 24">
                         <path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/>
                     </svg>
-                    +261 37 78 817 38
+                    +261 37 77 817 25
                 </div>
                 <div class="contact-item">
                     <svg class="icon" viewBox="0 0 24 24">
                         <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
                     </svg>
-                    Lot vs 60 Ambohidahy
+                    Lot vs 60 Ambolokandrina 
                 </div>
             </div>
         </header>
@@ -352,7 +359,7 @@
                 <div class="experience-item">
                     <h3>Brain 2 Soft - Développeur PHP & Laravel</h3>
                     <div class="company">Brain 2 Soft</div>
-                    <div class="date">FÉVRIER 2024 - AOÛT 2016</div>
+                    <div class="date">Mai 2019 - Septembre 2019</div>
                     <div class="description">
                         <ul>
                             <li>Développement de logiciels de micro-finance</li>
@@ -361,28 +368,39 @@
                 </div>
 
                 <div class="experience-item">
-                    <h3>OpenSystem Madagascar - Développeur stagiaire Junior</h3>
+                    <h3>CPP SYSTEM  Madagascar - Développeur stagiaire Junior</h3>
                     <div class="company">OpenSystem Madagascar</div>
-                    <div class="date">04 OCT 2020 - MAI 2021</div>
+                    <div class="date">04 OCT 2020 - Avril 2021</div>
                     <div class="description">
-                        <p>Stage professionnel axé sur la gestion intégrée de Gestion et Point de Responsabilité, Transport, une solution numérique dédiée à la gestion intégrée du transport collectif.</p>
+                        <p>Stage professionnel axé sur la gestion de Transport, une solution numérique dédiée à la gestion intégrée du transport collectif.</p>
                         <ul>
                             <li>Optimisation des processus de développement</li>
                             <li>Participation aux projets de transformation digitale</li>
                         </ul>
                     </div>
                 </div>
-
                 <div class="experience-item">
-                    <h3>OpenSystem Madagascar - Tech Lead Développeur</h3>
+                    <h3>CPP SYSTEM  Madagascar - Développeur  Junior</h3>
                     <div class="company">OpenSystem Madagascar</div>
-                    <div class="date">SEPTEMBRE 2022 - AOÛT 2023</div>
+                    <div class="date"> Avril 2021 - Jusqu' a ce jour</div>
                     <div class="description">
-                        <p>Direction technique et développement de solutions innovantes sur la plateforme CPS System technique de micro-services numériques.</p>
+                        <p>Responsable de produit , assure la bonne fonctionnement de l'application et integration des données en masse et assure le batch du systeme</p>
                         <ul>
+                            <li>Creation de divers api  pour les image et pour le batch</li>
+                            <li>Création d'une  application recencement en python (reconnaissance de plaque)</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="experience-item">
+                    <h3>CPP SYSTEM Madagascar - Tech Lead Développeur</h3>
+                    <div class="company">CPP SYSTEM  Madagascar</div>
+                    <div class="date">A ce Jour</div>
+                    <div class="description">
+                        <p>Direction technique et développement de solutions innovantes sur la plateforme CPP System Core de micro-services numériques.</p>
+                        <ul>
+                            <li>Dev Backend de tout le systeme de cpp system Madagascar</li>
                             <li>Pilotage d'équipes de développement</li>
                             <li>Architecture de solutions techniques complexes</li>
-                            <li>Gestion de projets numériques stratégiques</li>
                         </ul>
                     </div>
                 </div>
