--- a/myportfolio.html
+++ b/myportfolio.html
@@ -387,7 +387,7 @@
                         <p>Responsable de produit , assure la bonne fonctionnement de l'application et integration des données en masse et assure le batch du systeme</p>
                         <ul>
                             <li>Creation de divers api  pour les image et pour le batch</li>
-                            <li>Création d'une  application recencement en python (reconnaissance de plaque)</li>
+                            <li>Création d'une  application recencement en python (reconnaissance de plaque et envoi l'information)</li>
                         </ul>
                     </div>
                 </div>
