udpate nom societe

--- a/myportfolio.html
+++ b/myportfolio.html
@@ -369,7 +369,7 @@
 
                 <div class="experience-item">
                     <h3>CPP SYSTEM  Madagascar - Développeur stagiaire Junior</h3>
-                    <div class="company">OpenSystem Madagascar</div>
+                    <div class="company">Cpp System Madagascar</div>
                     <div class="date">04 OCT 2020 - Avril 2021</div>
                     <div class="description">
                         <p>Stage professionnel axé sur la gestion de Transport, une solution numérique dédiée à la gestion intégrée du transport collectif.</p>
@@ -381,7 +381,7 @@
                 </div>
                 <div class="experience-item">
                     <h3>CPP SYSTEM  Madagascar - Développeur  Junior</h3>
-                    <div class="company">OpenSystem Madagascar</div>
+                    <div class="company">Cpp System Madagascar</div>
                     <div class="date"> Avril 2021 - Jusqu' a ce jour</div>
                     <div class="description">
                         <p>Responsable de produit , assure la bonne fonctionnement de l'application et integration des données en masse et assure le batch du systeme</p>
