--- a/myportfolio.html
+++ b/myportfolio.html
@@ -420,7 +420,7 @@
                     <h3>Baccalauréat</h3>
                     <div class="school">Lycée Saint Pierre Canisius</div>
                     <div class="date">2013</div>
-                    <div class="description">Ambohibao</div>
+                    <div class="description">Ambohipo</div>
                 </div>
             </section>
 
